--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="menu.css">
+    <link rel="shortcut icon" href="KhanaDotCom.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
