--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
-    <link rel="stylesheet" href="menu.css">
-    <link rel="stylesheet" href="responsive.css">
+    <title>Demo</title>
     <link rel="shortcut icon" href="KhanaDotCom.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="menu.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -21,119 +23,121 @@
         </nav>
     </header>
     <main>
-        <div class="card">
+        <div class="cart">
             <h2>Great offers on Pizza's</h2>
-            <div class="card-items">
-                <div class="card-item">
-                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px"
-                        alt="">
+            <div class="cart-items">
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px" alt="">
                     <div class="lines">
                         <p>Chicken Cheese Pizza</p>
                         <p>Pirice: $22.00</p>
                         <p>Min 20% off</p>
                         <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
-                <div class="card-item">
-                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px"
-                        alt="">
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px" alt="">
                     <div class="lines">
                         <p>Plane cheese Pizza</p>
                         <p>Pirice: $12.00</p>
                         <p>Min 20% off</p>
                         <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
-                <div class="card-item">
-                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px"
-                        alt="">
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px" alt="">
                     <div class="lines">
                         <p>Chicken Pizza</p>
                         <p>Pirice: $19.00</p>
                         <p>Min 20% off</p>
                         <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
-                <div class="card-item">
-                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px"
-                        alt="">
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px" alt="">
                     <div class="lines">
                         <p>Paneer Pizza</p>
                         <p>Pirice: $17.00</p>
                         <p>Min 20% off</p>
                         <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
-                <div class="card-item">
-                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px"
-                        alt="">
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Pizza" height="120px" width="200px" alt="">
                     <div class="lines">
                         <p>Plane Pizza</p>
                         <p>Pirice: $9.00</p>
                         <p>Min 20% off</p>
                         <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="cart">
+            <h2>Great offers on Dosa's</h2>
+            <div class="cart-items">
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px" alt="">
+                    <div class="lines">
+                        <p>Masala Cheese Dosa</p>
+                        <p>Pirice: $22.00</p>
+                        <p>Min 20% off</p>
+                        <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
                 </div>
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px" alt="">
+                    <div class="lines">
+                        <p>Masala Dosa</p>
+                        <p>Pirice: $12.00</p>
+                        <p>Min 20% off</p>
+                        <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
                 </div>
-                <div class="card">
-                    <h2>Great offers on Dosa's</h2>
-                    <div class="card-items">
-                        <div class="card-item">
-                            <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px"
-                                alt="">
-                            <div class="lines">
-                                <p>Masala Cheese Dosa</p>
-                                <p>Pirice: $22.00</p>
-                                <p>Min 20% off</p>
-                                <p>Grab Now!</p>
-                            </div>
-                        </div>
-                        <div class="card-item">
-                            <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px"
-                                alt="">
-                            <div class="lines">
-                                <p>Masala Dosa</p>
-                                <p>Pirice: $12.00</p>
-                                <p>Min 20% off</p>
-                                <p>Grab Now!</p>
-                            </div>
-                        </div>
-                        <div class="card-item">
-                            <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px"
-                                alt="">
-                            <div class="lines">
-                                <p>Special Dosa</p>
-                                <p>Pirice: $19.00</p>
-                                <p>Min 20% off</p>
-                                <p>Grab Now!</p>
-                            </div>
-                        </div>
-                        <div class="card-item">
-                            <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px"
-                                alt="">
-                            <div class="lines">
-                                <p>Cheese Dosa</p>
-                                <p>Pirice: $17.00</p>
-                                <p>Min 20% off</p>
-                                <p>Grab Now!</p>
-                            </div>
-                        </div>
-                        <div class="card-item">
-                            <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px"
-                                alt="">
-                            <div class="lines">
-                                <p>Simple Pizza</p>
-                                <p>Pirice: $9.00</p>
-                                <p>Min 20% off</p>
-                                <p>Grab Now!</p>
-                            </div>
-                        </div>
-                        </div>
-                        </div>
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px" alt="">
+                    <div class="lines">
+                        <p>Special Dosa</p>
+                        <p>Pirice: $19.00</p>
+                        <p>Min 20% off</p>
+                        <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px" alt="">
+                    <div class="lines">
+                        <p>Cheese Dosa</p>
+                        <p>Pirice: $17.00</p>
+                        <p>Min 20% off</p>
+                        <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+                <div class="cart-item">
+                    <img src="https://source.unsplash.com/random/1600×500/?Dosa" height="120px" width="200px" alt="">
+                    <div class="lines">
+                        <p>Simple Pizza</p>
+                        <p>Pirice: $9.00</p>
+                        <p>Min 20% off</p>
+                        <p>Grab Now!</p>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <h2>&copy; 2024 KhanaDotCom</h2>
     </footer>
 </body>
+<script src="demo.js"></script>
+
 </html>
