--- a/index.html
+++ b/index.html
@@ -138,6 +138,6 @@
         <h2>&copy; 2024 KhanaDotCom</h2>
     </footer>
 </body>
-<script src="demo.js"></script>
+<script src="menu.js"></script>
 
 </html>
