--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
+    <title>Menu</title>
     <link rel="shortcut icon" href="KhanaDotCom.jpg" type="image/x-icon">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="menu.css">
